bin_PROGRAMS = bard
bard_SOURCES = main.c barconfig.c unitexecute.c runner.c logger.c vector.c linkedlist.c unit.c configparser.c workmanager.c sortedlist.c formatter.c advancedformat.c output.c xlib_color.c unitcontainer.c fs.c map.c font.c regex.c formatarray.c parser.c myerror.c
bard_LDADD = -liniparser -lX11 -lJudy -lpcre2-8 -lpthread
